--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
           integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+          
+          <p style="text-align:left">
+            Create Your Own Event! <button id="new-event-btn">Add a new event!</button>
+          </p>
+
+          <div class="container">
+            <form class="add-event-form">
+              <h3>Create an Event!</h3>
+      
+              <input
+                type="text"
+                name="name"
+                value=""
+                placeholder="Enter an Event name"
+                class="input-text"
+              />
+              <br />
+              <input
+                type="text"
+                name="Date"
+                value=""
+                placeholder="Select a Date"
+                class="input-text"
+              />
+              <br />
+              <input
+                type="submit"
+                name="submit"
+                value="Create New Event"
+                class="submit"
+              />
+            </form>
+          </div>
 
 </head>
 <body>
