--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
               />
               <br />
               <input
+                type="text"
+                name="Content"
+                value=""
+                placeholder="Please Create a Description"
+                class="input-text"
+              />
+              <br />
+              <input
                 type="submit"
                 name="submit"
                 value="Create New Event"
