--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     Create Your Own Event! <button id="new-event-btn">Add a new event!</button>
   </p>
 
-  <div class="container">
+  <div class="form">
     <form class="add-event-form">
       <h3>Create an Event!</h3>
 
