--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
         class="input-text"
       />
       <br />
+      <input style="height:100px;width:200px;font-size:12pt;"
+        type="text-area"
+        name="Content"
+        value=""
+        placeholder="Enter a Description"
+        class="input-text"
+      />
+      <br />
       <input
         type="submit"
         name="submit"
