--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
       />
       <br />
       <input
+        classname="event-submit"
         type="submit"
         name="submit"
         value="Create New Event"
@@ -114,7 +115,7 @@
   </div>
 
 <h3 classname="event">Events</h3>
-<ul classname="users-event">
+<!-- <ul classname="users-event"></ul> -->
 
 </ul>
 
